💎 style: material override.

--- a/front-end/src/app/authentication/pages/login/login.component.html
+++ b/front-end/src/app/authentication/pages/login/login.component.html
@@ -39,11 +39,10 @@
       (click)="login(form.value)"
       [disabled]="form.invalid"
       mat-raised-button
-      color="primary"
     >
       Login
     </button>
-    <a class="pull-right" [routerLink]="['/authentication', 'register']"
+    <a [routerLink]="['/authentication', 'register']"
       ><span>Não possui uma conta ainda?</span>
       <span>crie a sua aqui!</span>
     </a>
