--- a/front-end/src/app/authentication/pages/register/register.component.html
+++ b/front-end/src/app/authentication/pages/register/register.component.html
@@ -52,7 +52,7 @@
     >
       Cadastrar
     </button>
-    <a class="pull-right" [routerLink]="['/authentication', 'login']"
+    <a [routerLink]="['/authentication', 'login']"
       ><span>Já possui uma conta?</span>
       <span>faça seu login sua aqui!</span>
     </a>
