--- a/front-end/src/app/authentication/pages/register/register.component.scss
+++ b/front-end/src/app/authentication/pages/register/register.component.scss
@@ -43,6 +43,10 @@ a {
   color: $color-link;
   font-size: rem(12);
 
+  &:hover {
+    color: $color-link-hover;
+  }
+
   span {
     display: block;
   }
