--- a/front-end/src/app/core/pages/home/home.component.html
+++ b/front-end/src/app/core/pages/home/home.component.html
@@ -5,8 +5,8 @@
       O melhor lugar para você começar ou completar a sua coleção de HQ's do
       Brasil.
     </p>
-    <a routerLink="/quadrinhos" class="panel__button">
-      <strong>Ver HQ's</strong>
+    <a routerLink="/quadrinhos" mat-raised-button class="panel__button">
+      Ver HQ's
     </a>
   </div>
   <img src="../../../assets/img/hero-image.png" alt="" />
