--- a/front-end/src/sass/_media.scss
+++ b/front-end/src/sass/_media.scss
@@ -40,7 +40,7 @@ $small-tablet: "small-tablet";
 $mobile: "mobile";
 $tiny-mobile: "tiny-mobile";
 
-$media-desktop: 1200;
+$_media-desktop: 1200;
 $media-large-tablet: 991;
 $media-tablet: 767;
 $media-small-tablet: 720;
