✨ feat: fade-animation added.

--- a/front-end/src/app/authentication/pages/login/login.component.html
+++ b/front-end/src/app/authentication/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card @fadeInOut>
   <mat-card-header>
     <mat-card-title>Bem vindo Novamente</mat-card-title>
     <mat-card-subtitle
