--- a/front-end/src/app/authentication/pages/register/register.component.html
+++ b/front-end/src/app/authentication/pages/register/register.component.html
@@ -1,10 +1,10 @@
-<mat-card>
+<mat-card @fadeInOut>
   <mat-card-header>
     <mat-card-title>Cadastro</mat-card-title>
     <mat-card-subtitle>faça o seu cadastro com a gente</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup]="form">
+    <form [formGroup]="form" *ngIf="form">
       <mat-form-field>
         <input
           type="email"
