--- a/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
+++ b/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
@@ -111,8 +111,16 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr
+      [@listStagger]="paginator?.length"
+      mat-header-row
+      *matHeaderRowDef="displayedColumns"
+    ></tr>
+    <tr
+      [@listStagger]="paginator?.length"
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+    ></tr>
   </table>
 
   <mat-paginator
