--- a/front-end/src/app/core/pages/home/home.component.html
+++ b/front-end/src/app/core/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section @fadeInOut class="panel">
+<section class="panel">
   <div class="panel__info">
     <h1 class="panel__title">Comics++</h1>
     <p class="panel__subtitle">
