--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -78,7 +78,7 @@ $project-colors: (
 
 $project-colors-theme-dark: (
   "primary": #0d9798,
-  "header-bg": #1d1d1d,
+  "header-bg": #262525,
   "form-field-placeholder": #d7d7d7,
   "form-field-placeholder-active": #6ba8c7,
   "background": #121212,
