--- a/front-end/src/app/admin/pages/admin/admin.component.html
+++ b/front-end/src/app/admin/pages/admin/admin.component.html
@@ -26,6 +26,8 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <router-outlet></router-outlet>
+    <main [@fadeAnimation]="getRouterOutletState(o)">
+      <router-outlet #o="outlet"></router-outlet>
+    </main>    
   </mat-sidenav-content>
 </mat-sidenav-container>
