--- a/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
@@ -92,6 +92,14 @@
           >
             Pesquisar
           </button>
+          <button
+            (click)="loadData2()"
+            class="search-button"
+            mat-flat-button
+            color="primary"
+          >
+            Teste
+          </button>
         </div>
       </div>
     </div>
