--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -3,6 +3,11 @@
 @import "mixins";
 @import "functions";
 
+.ng-animating {
+  grid-column: 1 !important;
+  grid-row: 1 !important;
+}
+
 :host {
   display: flex;
   flex-direction: column;
@@ -25,11 +30,17 @@
     background-color: var(--color-background);
   }
 
+  ::ng-deep main {
+    display: grid;
+    width: 100vw;
+    max-width: $global-max-width;
+  }
+
   // afeta todos os itens dentro da outlet
   ::ng-deep router-outlet ~ * {
+    grid-row: 1;
+    grid-column: 1;
     margin-top: $header-size;
-    width: 100%;
-    height: 100%;
     max-width: $global-max-width;
     padding: rem(20 40);
 
