--- a/front-end/src/app/authentication/pages/register/register.component.html
+++ b/front-end/src/app/authentication/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<mat-card @fadeInOut>
+<mat-card>
   <mat-card-header>
     <mat-card-title>Cadastro</mat-card-title>
     <mat-card-subtitle>faça o seu cadastro com a gente</mat-card-subtitle>
