💎 style: filter bottom-divider margin.

--- a/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
@@ -14,7 +14,7 @@
   <i class="fas fa-filter"></i>
   Filtros
 </h2>
-<mat-divider></mat-divider>
+<mat-divider class="filter__bottom-divider"></mat-divider>
 
 <div class="inner-wrapper">
   <form class="genre-form" [formGroup]="form">
@@ -38,7 +38,7 @@
 
       <mat-expansion-panel>
         <mat-expansion-panel-header>
-          <mat-panel-title> Filtros </mat-panel-title>
+          <mat-panel-title> Filtros Avançados </mat-panel-title>
         </mat-expansion-panel-header>
 
         <mat-form-field>
