--- a/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
+++ b/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
@@ -10,7 +10,7 @@
   <i class="fas fa-filter"></i>
   Filtros
 </h2>
-<mat-divider></mat-divider>
+<mat-divider class="filter__bottom-divider"></mat-divider>
 
 <div class="inner-wrapper">
   <form class="genre-form" [formGroup]="form">
