--- a/front-end/src/app/admin/pages/admin/admin.component.html
+++ b/front-end/src/app/admin/pages/admin/admin.component.html
@@ -22,6 +22,10 @@
         <i class="fas fa-inventory icon"></i>
         <span>Estoque</span>
       </a>
+      <a mat-list-item routerLinkActive="active" [routerLink]="['author-test']">
+        <i class="fas fa-inventory icon"></i>
+        <span>Author Test</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
