📦 refactor: new crud structure.

--- a/front-end/src/app/admin/pages/author-crud/author-crud.component.html
+++ b/front-end/src/app/admin/pages/author-crud/author-crud.component.html
@@ -36,7 +36,7 @@
     <div class="full-wrapper button-wrapper">
       <div class="button-wrapper">
         <button
-          (click)="loadData(form.value)"
+          (click)="loadData()"
           class="search-button"
           mat-flat-button
           color="primary"
