--- a/front-end/src/app/admin/components/comic-inventory-dialog/comic-inventory-dialog.component.html
+++ b/front-end/src/app/admin/components/comic-inventory-dialog/comic-inventory-dialog.component.html
@@ -11,12 +11,13 @@
   </mat-dialog-content>
 
   <mat-dialog-actions>
-    <button class="mat-raised-button" (click)="close()">Fechar</button>
+    <button mat-raised-button (click)="close()">Fechar</button>
     <button
       [disabled]="form.invalid"
       [class.disabled]="form.invalid"
-      class="mat-raised-button mat-primary"
-      (click)="save(form.controls.quantity.value)"
+      mat-raised-button
+      color="primary"
+      (click)="save()"
     >
       Salvar
     </button>
