💎 style: crud search button.

--- a/front-end/src/app/admin/pages/author-crud/author-crud.component.html
+++ b/front-end/src/app/admin/pages/author-crud/author-crud.component.html
@@ -38,7 +38,7 @@
         <button
           (click)="loadData()"
           class="search-button"
-          mat-flat-button
+          mat-raised-button
           color="primary"
         >
           Pesquisar
