--- a/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
@@ -87,7 +87,7 @@
           <button
             (click)="loadData(form.value)"
             class="search-button"
-            mat-flat-button
+            mat-raised-button
             color="primary"
           >
             Pesquisar
