--- a/front-end/src/app/admin/pages/base-crud/base-crud.component.html
+++ b/front-end/src/app/admin/pages/base-crud/base-crud.component.html
@@ -23,7 +23,7 @@
     <button
       (click)="loadData()"
       class="search-button"
-      mat-flat-button
+      mat-raised-button
       color="primary"
     >
       Pesquisar
