--- a/front-end/src/app/admin/pages/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/admin/pages/genre-crud/genre-crud.component.html
@@ -38,7 +38,7 @@
         <button
           (click)="loadData(form.value)"
           class="search-button"
-          mat-flat-button
+          mat-raised-button
           color="primary"
         >
           Pesquisar
