📦 refactor: base-crud text-add-button and state.

--- a/front-end/src/app/admin/pages/author-test/author-test.component.html
+++ b/front-end/src/app/admin/pages/author-test/author-test.component.html
@@ -1,5 +1,7 @@
 <cms-base-crud
   titleName="Autores"
+  addButtonText="Novo Autor"
+  [loadingComplete]="loadingComplete"
   (paginatorEvent)="refreshPaginator()"
   (load)="loadData()"
   (add)="openDialog()"
