📦 refactor(admin): input autofocus added.

--- a/front-end/src/app/admin/components/author-dialog/author-dialog.component.html
+++ b/front-end/src/app/admin/components/author-dialog/author-dialog.component.html
@@ -3,7 +3,13 @@
 
   <mat-dialog-content>
     <mat-form-field>
-      <input matInput placeholder="Nome" formControlName="name" />
+      <input
+        matInput
+        autofocus
+        onFocus="this.select()"
+        placeholder="Nome"
+        formControlName="name"
+      />
       <mat-error>
         <span cmsShowValidation="name"></span>
       </mat-error>
