--- a/front-end/src/app/admin/pages/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/admin/pages/genre-crud/genre-crud.component.html
@@ -1,140 +1,98 @@
-<div class="title-group">
-  <h1 class="title">
-    <i class="fa fa-tag" aria-hidden="true"></i>
-    Categorias
-  </h1>
-
-  <cms-add-button
-    (clickEvent)="openDialog()"
-    [buttonText]="'Nova Categoria'"
-  ></cms-add-button>
-</div>
-<mat-divider></mat-divider>
-<h2 class="filter">
-  <i class="fas fa-filter"></i>
-  Filtros
-</h2>
-<mat-divider class="filter__bottom-divider"></mat-divider>
-
-<div class="inner-wrapper">
-  <form class="genre-form" [formGroup]="form">
-    <div class="controlers-wrapper">
-      <mat-form-field>
-        <input
-          type="number"
-          matInput
-          placeholder="ID"
-          formControlName="genreID"
-        />
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="Nome" formControlName="description" />
-      </mat-form-field>
-    </div>
-
-    <div class="full-wrapper button-wrapper">
-      <div class="button-wrapper">
-        <button
-          (click)="loadData(form.value)"
-          class="search-button"
-          mat-raised-button
-          color="primary"
-        >
-          Pesquisar
-        </button>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div
-  class="title-group subtitle"
-  [ngStyle]="{
-    display: loadingComplete && paginator.length ? 'table' : 'none'
-  }"
+<cms-base-crud
+  titleName="Categorias"
+  addButtonText="Nova Categoria"
+  [loadingComplete]="loadingComplete"
+  (paginatorEvent)="refreshPaginator()"
+  (load)="loadData()"
+  (add)="openDialog()"
 >
-  <h1 class="mat-h1">
-    <i class="fa fa-list-alt" aria-hidden="true"></i>
-    Lista de Categorias
-  </h1>
-</div>
+  <div slot="filter" class="inner-wrapper">
+    <form class="genre-form" [formGroup]="form">
+      <div class="controlers-wrapper">
+        <mat-form-field>
+          <input
+            type="number"
+            matInput
+            placeholder="ID"
+            formControlName="genreID"
+          />
+        </mat-form-field>
 
-<div class="container">
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner></mat-spinner>
+        <mat-form-field>
+          <input matInput placeholder="Nome" formControlName="description" />
+        </mat-form-field>
+      </div>
+    </form>
   </div>
 
-  <p
-    [ngStyle]="{
-      display: loadingComplete && !paginator.length ? 'block' : 'none'
-    }"
-    class="no-data"
-  >
-    nenhum registro encontrado.
-  </p>
+  <div class="container" slot="body">
+    <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+      <mat-spinner></mat-spinner>
+    </div>
 
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    [ngStyle]="{
-      display: loadingComplete && paginator.length ? 'table' : 'none'
-    }"
-  >
-    <ng-container matColumnDef="GenreID">
-      <th mat-header-cell *matHeaderCellDef>Categoria ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
-    </ng-container>
+    <p
+      [ngStyle]="{
+        display: loadingComplete && !paginator.length ? 'block' : 'none'
+      }"
+      class="no-data"
+    >
+      nenhum registro encontrado.
+    </p>
 
-    <ng-container matColumnDef="Nome">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-    </ng-container>
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      [ngStyle]="{
+        display: loadingComplete && paginator.length ? 'table' : 'none'
+      }"
+    >
+      <ng-container matColumnDef="GenreID">
+        <th mat-header-cell *matHeaderCellDef>Categoria ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="Ações">
-      <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let element; let i = index">
-        <button
-          mat-icon-button
-          [matMenuTriggerFor]="menu"
-          aria-label="Example icon-button with a menu"
-        >
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="openDialog(element)">
-            <mat-icon color="primary">edit</mat-icon>
-            <span>Editar</span>
+      <ng-container matColumnDef="Nome">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Ações">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <button
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Example icon-button with a menu"
+          >
+            <mat-icon>more_vert</mat-icon>
           </button>
-          <button mat-menu-item (click)="deleteItem(element)">
-            <mat-icon color="warn">delete</mat-icon>
-            <span>Deletar</span>
-          </button>
-          <button mat-menu-item (click)="deleteGenreRelationships(element)">
-            <mat-icon color="warn">settings_input_component</mat-icon>
-            <span> Remover Vínculos</span>
-          </button>
-        </mat-menu>
-      </td>
-    </ng-container>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="openDialog(element)">
+              <mat-icon color="primary">edit</mat-icon>
+              <span>Editar</span>
+            </button>
+            <button mat-menu-item (click)="deleteItem(element)">
+              <mat-icon color="warn">delete</mat-icon>
+              <span>Deletar</span>
+            </button>
+            <button mat-menu-item (click)="deleteGenreRelationships(element)">
+              <mat-icon color="warn">settings_input_component</mat-icon>
+              <span> Remover Vínculos</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
 
-    <tr
-      [@listStagger]="paginator?.length"
-      mat-header-row
-      *matHeaderRowDef="displayedColumns"
-    ></tr>
-    <tr
-      [@listStagger]="paginator?.length"
-      mat-row
-      *matRowDef="let row; columns: displayedColumns"
-    ></tr>
-  </table>
-
-  <mat-paginator
-    [ngStyle]="{
-      display: loadingComplete && paginator.length ? 'block' : 'none'
-    }"
-    [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
-  ></mat-paginator>
-</div>
+      <tr
+        [@listStagger]="paginator?.length"
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"
+      ></tr>
+      <tr
+        [@listStagger]="paginator?.length"
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+      ></tr>
+    </table>
+  </div>
+</cms-base-crud>
