📦 refactor(admin): call save method on enter key.

--- a/front-end/src/app/admin/components/author-dialog/author-dialog.component.html
+++ b/front-end/src/app/admin/components/author-dialog/author-dialog.component.html
@@ -9,6 +9,7 @@
         onFocus="this.select()"
         placeholder="Nome"
         formControlName="name"
+        (keyup.enter)="save()"
       />
       <mat-error>
         <span cmsShowValidation="name"></span>
