--- a/front-end/src/app/admin/components/comic-inventory-dialog/comic-inventory-dialog.component.html
+++ b/front-end/src/app/admin/components/comic-inventory-dialog/comic-inventory-dialog.component.html
@@ -10,6 +10,7 @@
         formControlName="quantity"
         autofocus
         onFocus="this.select()"
+        (keyup.enter)="save()"
       />
       <mat-error>
         <span cmsShowValidation="quantity"></span>
