--- a/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
+++ b/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
@@ -1,3 +1,99 @@
+<cms-base-crud
+  titleName="Estoque"
+  [loadingComplete]="loadingComplete"
+  (paginatorEvent)="refreshPaginator()"
+  (load)="loadData()"
+  (add)="openDialog()"
+>
+  <div slot="filter" class="inner-wrapper">
+    <form class="genre-form" [formGroup]="form">
+      <div class="controlers-wrapper">
+        <mat-form-field>
+          <input
+            type="number"
+            matInput
+            placeholder="ID"
+            formControlName="comicID"
+          />
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput placeholder="Nome" formControlName="title" />
+        </mat-form-field>
+      </div>
+    </form>
+  </div>
+
+  <div class="container" slot="body">
+    <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+      <mat-spinner></mat-spinner>
+    </div>
+
+    <p
+      [ngStyle]="{
+        display: loadingComplete && !paginator.length ? 'block' : 'none'
+      }"
+      class="no-data"
+    >
+      nenhum registro encontrado.
+    </p>
+
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      [ngStyle]="{
+        display: loadingComplete && paginator.length ? 'table' : 'none'
+      }"
+    >
+      <ng-container matColumnDef="ComicInventoryID">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.comicID }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Name">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Quantity">
+        <th mat-header-cell *matHeaderCellDef>Quantidade</th>
+        <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Actions">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <button
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Example icon-button with a menu"
+          >
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="openDialog(element)">
+              <mat-icon color="primary">edit</mat-icon>
+              <span>Editar</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <tr
+        [@listStagger]="paginator?.length"
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"
+      ></tr>
+      <tr
+        [@listStagger]="paginator?.length"
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+      ></tr>
+    </table>
+  </div>
+
+  <!--
+
 <div class="title-group">
   <h1 class="title">
     <i class="fa fa-tag" aria-hidden="true"></i>
@@ -130,4 +226,5 @@
     [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons
   ></mat-paginator>
-</div>
+</div> -->
+</cms-base-crud>
