📦 refactor(admin): add button verification.

--- a/front-end/src/app/admin/pages/base-crud/base-crud.component.html
+++ b/front-end/src/app/admin/pages/base-crud/base-crud.component.html
@@ -5,6 +5,7 @@
   </h1>
 
   <cms-add-button
+    *ngIf="addButtonText"
     (clickEvent)="openDialog()"
     [buttonText]="addButtonText"
   ></cms-add-button>
