--- a/front-end/src/app/admin/pages/author-crud/author-crud.component.html
+++ b/front-end/src/app/admin/pages/author-crud/author-crud.component.html
@@ -15,11 +15,17 @@
             matInput
             placeholder="ID"
             formControlName="authorID"
+            (keyup.enter)="loadData()"
           />
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="Nome" formControlName="name" />
+          <input
+            matInput
+            placeholder="Nome"
+            formControlName="name"
+            (keyup.enter)="loadData()"
+          />
         </mat-form-field>
       </div>
     </form>
