--- a/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
+++ b/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
@@ -14,11 +14,17 @@
             matInput
             placeholder="ID"
             formControlName="comicID"
+            (keyup.enter)="loadData()"
           />
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="Nome" formControlName="title" />
+          <input
+            matInput
+            placeholder="Nome"
+            formControlName="title"
+            (keyup.enter)="loadData()"
+          />
         </mat-form-field>
       </div>
     </form>
@@ -91,140 +97,4 @@
       ></tr>
     </table>
   </div>
-
-  <!--
-
-<div class="title-group">
-  <h1 class="title">
-    <i class="fa fa-tag" aria-hidden="true"></i>
-    Estoque
-  </h1>
-</div>
-<mat-divider></mat-divider>
-
-<h2 class="filter">
-  <i class="fas fa-filter"></i>
-  Filtros
-</h2>
-<mat-divider class="filter__bottom-divider"></mat-divider>
-
-<div class="inner-wrapper">
-  <form class="genre-form" [formGroup]="form">
-    <div class="controlers-wrapper">
-      <mat-form-field>
-        <input
-          type="number"
-          matInput
-          placeholder="ID"
-          formControlName="comicID"
-        />
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="Nome" formControlName="title" />
-      </mat-form-field>
-    </div>
-
-    <div class="full-wrapper button-wrapper">
-      <div class="button-wrapper">
-        <button
-          (click)="loadData(form.value)"
-          class="search-button"
-          mat-raised-button
-          color="primary"
-        >
-          Pesquisar
-        </button>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div
-  class="title-group subtitle"
-  [ngStyle]="{
-    display: loadingComplete && paginator.length ? 'table' : 'none'
-  }"
->
-  <h1 class="mat-h1">
-    <i class="fa fa-list-alt" aria-hidden="true"></i>
-    Lista de Itens
-  </h1>
-</div>
-
-<div class="container">
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner></mat-spinner>
-  </div>
-
-  <p
-    [ngStyle]="{
-      display: loadingComplete && !paginator.length ? 'block' : 'none'
-    }"
-    class="no-data"
-  >
-    nenhum registro encontrado.
-  </p>
-
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    [ngStyle]="{
-      display: loadingComplete && paginator.length ? 'table' : 'none'
-    }"
-  >
-    <ng-container matColumnDef="ComicInventoryID">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.comicID }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="Quantity">
-      <th mat-header-cell *matHeaderCellDef>Quantidade</th>
-      <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="Actions">
-      <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let element; let i = index">
-        <button
-          mat-icon-button
-          [matMenuTriggerFor]="menu"
-          aria-label="Example icon-button with a menu"
-        >
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="openDialog(element)">
-            <mat-icon color="primary">edit</mat-icon>
-            <span>Editar</span>
-          </button>
-        </mat-menu>
-      </td>
-    </ng-container>
-
-    <tr
-      [@listStagger]="paginator?.length"
-      mat-header-row
-      *matHeaderRowDef="displayedColumns"
-    ></tr>
-    <tr
-      [@listStagger]="paginator?.length"
-      mat-row
-      *matRowDef="let row; columns: displayedColumns"
-    ></tr>
-  </table>
-
-  <mat-paginator
-    [ngStyle]="{
-      display: loadingComplete && paginator.length ? 'block' : 'none'
-    }"
-    [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
-  ></mat-paginator>
-</div> -->
 </cms-base-crud>
